feat: 명언 게시판 14단계 - 검색 + 페이징 기능 추가 - Repository 분리 (File / Memory)